--- a/css/style.css
+++ b/css/style.css
@@ -1,98 +1,184 @@
-.goldman-regular {
-  font-family: "Goldman", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+@font-face {
+  font-family: 'Goldman';
+  src: url('../fonts/Goldman-Regular.ttf') format('truetype');
 }
 
-.goldman-bold {
-  font-family: "Goldman", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-body,
-main {
-  display: block;
+main,
+body {
   margin: 0;
   padding: 0;
 }
 
-main {
-  height: calc(100vh - 8vh);
-  width: 100vw;
-}
-
-header,
-footer {
-  height: 4vh;
-  width: 100vw;
-}
-
 header {
-  align-items: center;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  background-color: #ea2410;
-  display: flex;
-  justify-content: center;
-}
-
-footer {
-  align-items: center;
-  background-color: #000000;
-  color: #ffffff;
-  display: flex;
-  font-family: "Goldman", "Arial", "Helvetica", "sans-serif";
-  font-size: 1.6vh;
-  justify-content: center;
+  background-color: #e9240d;
+  height: 4vh;
+  top: 0;
+  left: 0;
+  position: fixed;
   width: 100vw;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
-footer p {
-  align-items: center;
+header a {
   display: flex;
-  justify-content: center;
-  margin-left: 20vw;
+  height: 100%;
+  width: 100%;
+  z-index: 100;
 }
 
-.nav {
+main {
+  width: 99vw;
+  height: auto;
+}
+
+section {
+  height: 100vh;
+  margin-right: 20vw;
+  width: calc(100vw - 20vw);
+}
+
+.home {
+  padding-top: 4vh;
+  height: calc(100vh - 4vh);
+}
+
+nav {
+  background-color: #000000;
   display: flex;
-  font-family: "Goldman", "Arial", "Helvetica", "sans-serif";
-  font-size: 2vh;
-  height: calc(100vh - 8vh);
+  flex-direction: column;
+  height: calc(100vh - 4vh);
+  margin: 4vh 0 0 0;
+  padding: 0;
+  position: fixed;
   width: 20vw;
 }
 
-.nav ul {
+.main-menu {
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 9.33vh);
   margin: 0;
+  padding: 0;
+  width: 20vw;
+  z-index: 0;
 }
 
-.nav ul li a {
-  border: solid 1px #000000;
-  display: inherit;
+.button {
+  margin-top: .2vh;
+}
+
+.main-menu li {
   align-items: center;
-  background-color: #252225;
+  background-color: #16171c;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+
+.main-menu li a {
+  align-items: center;
   color: #ffffff;
-  height: 20%;
+  display: flex;
+  font-family: 'Goldman',Verdana, Tahoma, sans-serif;
+  font-size: 2vh;
+  justify-content: center;
+  text-decoration: none;
+  height: 100%;
+  width: 100%;
+}
+
+
+.social-menu {
+  background-color: aqua;
+  display: flex;
+  flex-direction: row;
+  height: 4vh;
+  margin-top: 0;
+  padding: 0;
+  width: 20vw;
+  z-index: 0;
+  border-top: solid white 2px;
+}
+
+
+.social-menu div {
+  height: 100%;
+  width: 34.3%;
+}
+
+.social-menu div i {
+  align-items: center;
+  display: flex;
+  font-size: 2vh;
+  height: 100%;
   justify-content: center;
   text-decoration: none;
 }
 
-.nav ul li a:hover {
-  background-color: #000000;
+.fa:hover {
+    opacity: 0.7;
 }
 
-.desktop-hero-container {
-  height: calc(100vh - 8vh);
-  width: 80vw
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-youtube {
+  background: #e9240d;
+  color: white;
+}
+
+.desktop-video {
+  height: 100vh;
+  margin-left: 24vw;
+  width: calc(100vw - 24.65vw);
+  z-index: 0;
 }
 
 .video {
-  object-fit:cover;
+  object-fit: cover;
+  outline: none;
   z-index: 20;
   background-color: transparent;
   width: 100%;
-  height: calc(100vh - 7.9vh);
+  height: 100%;
+  z-index: 0;
 }
+
+
+.domestic {
+  height: calc(100vh-7.9vh);
+  width: 99vw;
+}
+
+.commercial {
+  height: calc(100vh-7.9vh);
+  width: 99vw;
+}
+
+.testandtag {
+  height: calc(100vh-7.9vh);
+  width: 99vw;
+}
+
+.aboutus {
+  height: calc(100vh-7.9vh);
+  width: 99vw;
+}
+
+.contactus {
+  height: calc(100vh-7.9vh);
+  width: 99vw;
+}
+
 
 /* ************************** */
 /* ****                   *** */
@@ -100,56 +186,30 @@ footer p {
 /* ****                   *** */
 /* ************************** */
 @media only screen and (max-width: 360px) {
-  .mobile-hero-container {
-    display: flex;
-    width: 100vw;
-    height: auto;
-  }
 
-  .mobile-hero-container img {
-    height: auto;
-    width: 100%;
-    object-fit:cover;
-  }
-
-  .desktop-hero-container {
-    display: none;
-  }
-
-  .nav {
-    display: flex;
-    flex-direction: column;
-    height: calc(100vh - 29vh);
-    width: 100vw;
-  }
-
-  .nav ul {
-    display: inherit;
-    flex-direction: inherit;
-    padding: 0;
-    width: 100%;
-  }
-
-  .nav ul li {
-    display: flex;
-    flex-direction: inherit;
-    height: calc(100vh - 29vh);
-    width: 100%;
-  }
-
-  .nav ul li a {
-    border: solid 1px #000000;
-    display: inherit;
-    align-items: center;
-    background-color: #2c3134;
-    color: #ffffff;
-    height: 20%;
-    justify-content: center;
-    text-decoration: none;
-  }
   
-  footer p {
-    margin-left: 0;
+  .hero-image {
+    width: 100vw;
+    height: 100vh;
+    margin-left: 20vw;
+  }
+
+  .hero-image img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+  }
+
+  span {
+    visibility: hidden;
+  }
+
+  .main-menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
   }
 
 }
@@ -160,56 +220,7 @@ footer p {
 /* ****                   *** */
 /* ************************** */
 
-@media screen and (max-width: 769px) and (min-width: 361px) {
-
-  main {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .mobile-hero-container {
-    display: flex;
-    height: 36vh;
-    width: 100%;
-  }
-
-  .mobile-hero-container img {
-    width: 100%;
-    height: 100%;
-  }
-
-  .desktop-hero-container {
-    display: none;
-  }
-
-  .nav {
-    display: flex;
-    flex-direction: column;
-    height: calc(100vh - 36vh - 8vh);
-    width: 100vw;
-  }
-
-  .nav ul {
-    display: inherit;
-    flex-direction: inherit;
-    height: inherit;
-    padding: 0;
-    width: 100%;
-  }
-
-  .nav ul li {
-    display: flex;
-    flex-direction: inherit;
-    height: calc(100vh - 36vh - 8vh);
-    width: 100%;
-  }
-
-  footer p {
-    margin-left: 0;
-  }
-
-
-}
+@media screen and (max-width: 769px) and (min-width: 361px) {}
 
 /* *************************** */
 /* ****                    *** */
@@ -217,55 +228,30 @@ footer p {
 /* ****                    *** */
 /* *************************** */
 @media only screen and (min-width: 770px) {
-  main {
-    display: flex;
+  .hero-image {
+    width: 80vw;
+    height: 100vh;
+    margin-left: 20vw;
   }
 
-  .mobile-hero-container {
-    display: none;
-  }
-
-  .desktop-hero-container {
-    display: flex;
-  }
-
-  .nav {
-    display: flex;
-    flex-direction: column;
-    height: calc(100vh - 8vh);
-    width: 20vw;
-  }
-
-  .nav ul {
-    display: inherit;
-    flex-direction: inherit;
-    height: inherit;
-    padding: 0;
+  .hero-image img {
+    height: 100%;
     width: 100%;
+    object-fit: cover;
   }
 
-  .nav ul li {
-    display: flex;
-    flex-direction: inherit;
-    height: calc(100vh - 8vh);
-    width: 100%;
+  .desktop-video {
+    width: calc(80vw);
+    margin-left: 20vw;
+    object-fit: cover;
   }
 
-  .nav ul li a {
-    display: inherit;
-    align-items: center;
-    color: #ffffff;
-    font-size: 1.6vw;
-    height: 20%;
-    justify-content: center;
-    text-decoration: none;
+  .fa-home,
+  .fa-building,
+  .fa-plug,
+  .fa-question-circle,
+  .fa-phone {
+    visibility: hidden;
   }
 
-  .border-button {
-    border: solid 1px #000000;
-  }
-
-  .top-button {
-    border-bottom: solid 1px #000000;
-  }
 }
