--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,27 @@ nav {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
+.hamburger-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 20px;
+}
+
+.bar {
+    width: 25px;
+    height: 3px;
+    background-color: var(--wam-dark-gry);
+    margin: 4px 0;
+}
+
 .logo-wrapper {
     height: 100%;
     padding-left: 1vh;
@@ -247,6 +268,26 @@ footer {
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 
+    .logo-wrapper {
+        width: 50%;
+        height: auto;
+    }
+
+    .logo-wrapper img {
+        height: 100%;
+        width: 100%;
+
+    }
+
+    .nav-links {
+        display: none;
+    }
+
+    .hamburger-menu {
+        display: flex;
+    }
+
+
     .home-grid-wrapper,
     .about-grid-wrapper,
     .services-grid-wrapper,
@@ -278,6 +319,13 @@ footer {
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
 
+    .nav-links {
+        display: none;
+    }
+
+    .hamburger-menu {
+        display: flex;
+    }
 
     .home-grid-wrapper,
     .about-grid-wrapper,
@@ -309,7 +357,13 @@ footer {
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+    .nav-links {
+        display: none;
+    }
 
+    .hamburger-menu {
+        display: flex;
+    }
 
     .home-grid-wrapper,
     .about-grid-wrapper,
@@ -342,6 +396,14 @@ footer {
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
 
+    .nav-links {
+        display: none;
+    }
+
+    .hamburger-menu {
+        display: flex;
+    }
+
     .home-grid-wrapper,
     .about-grid-wrapper,
     .services-grid-wrapper,
@@ -372,6 +434,14 @@ footer {
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
+
+    .nav-links {
+        display: flex;
+    }
+
+    .hamburger-menu {
+        display: none;
+    }
 
     .home-grid-wrapper,
     .about-grid-wrapper,
